--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ textarea {
 body{
     background-color: #f2f2f2;
     font-family: 'Open Sans', sans-serif;
+    height: 100vh;
 }
 
 .contenedor{
@@ -135,29 +136,21 @@ body{
     }
 
 }
-
-
-
 h2{
     font-family: 'Oswald', sans-serif;
 }
-
 
 /* HEADER*/
 div.hero{
     background-image: url(../img/2.png);
     height: 100vh;
-    background-position: top center;
+    background-position: center center;
     background-size: cover;
 }
-
-
 @media only screen and (min-width: 768px){
     div.contenido-header{
         padding-top: 10px; 
     }
-
-
 }
 
 div.contenido-header{
@@ -244,8 +237,7 @@ h1.nombre-sitio{
 /*barra de navegacion*/
 div.barra{
     background-color: #353535;
-    padding: 20px 0;
-    
+    padding: 20px 0;    
 }
 
 div.logo{
